# little_ai_zoo

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.ipynb  知识库20240823.xlsx
MNIST/: ClassifiersComparison.ipynb  FeatureAgglomeration.ipynb  MNIST.ipynb  MultinomialLogisticRegression.ipynb  PCA.ipynb  README.ipynb  SVC.ipynb  SklearnMultilayerPerceptron.ipynb  TensorFlow-MNIST-CNN.ipynb  VGG13.ipynb  mnist_mlp.py
PoisonousChickenSoup/: README.ipynb
math_agents/: .env.example  math_mcp.py  math_tools.py  openai_tool.py  readme.md
name2gender/: gender_prediction_mlp.py  name2gender.ipynb  name2gender.py  prompt.md  readme.ipynb  readme.md
samples/: pycharts.ipynb  render.html
